@@ -608,7 +608,6 @@ class contentengine(object):
 
 
         self.debugger()
-        xbmc.log("TEST\n\n\n")
 
         # cloudservice - create settings module
         settings = settings.settings(addon)
